--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
     
           - name: 克隆源代码
             run: |
-                git clone https://git.openwrt.org/openwrt/openwrt.git
+                git clone https://github.com/istoreos/istoreos.git
                 cd openwrt
                 export OPENWRT_ROOT_PATH="$(pwd)"
                 echo "OPENWRT_ROOT_PATH=$OPENWRT_ROOT_PATH" >> $GITHUB_ENV
