--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       max-parallel: 8
       matrix:
-        tag_branche: [master-6.1,master-5.15,openwrt-23.05,openwrt-22.03,v23.05.2,v22.03.5]
+        tag_branche: [master-6.1,master-5.15,istoreos-23.05,istoreos-22.03,v23.05.2,v22.03.5]
         compile: [FLOW_OFFLOAD,SHORTCUT_FE,SHORTCUT_FE_CM,SHORTCUT_FE_DRV]
         exclude:
           - tag_branche: master-5.15
@@ -108,7 +108,7 @@ jobs:
           - name: 添加turboacc
             working-directory: ${{ env.OPENWRT_ROOT_PATH }}
             run: |
-              curl -sSL https://raw.githubusercontent.com/chenmozhijin/turboacc/luci/add_turboacc.sh -o add_turboacc.sh && bash add_turboacc.sh
+              curl -sSL https://raw.githubusercontent.com/zijieKwok/turboacc/luci/add_turboacc.sh -o add_turboacc.sh && bash add_turboacc.sh
               kernel_version="$(sed -n '/CONFIG_LINUX_/p' $OPENWRT_ROOT_PATH/.config | sed -e 's/CONFIG_LINUX_//' -e 's/=y//' -e 's/_/./g')"
               #log
               echo "libnftnl-file"
