--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       max-parallel: 8
       matrix:
-        tag_branche: [master-6.1,master-5.15,openwrt-23.05,openwrt-22.03,v23.05.2,v22.03.5]
+        tag_branche: [istoreos-23.05,istoreos-22.03]
         compile: [FLOW_OFFLOAD,SHORTCUT_FE,SHORTCUT_FE_CM,SHORTCUT_FE_DRV]
         exclude:
           - tag_branche: master-5.15
@@ -58,14 +58,14 @@ jobs:
     
           - name: 克隆源代码
             run: |
-                git clone https://git.openwrt.org/openwrt/openwrt.git
-                cd openwrt
+                git clone https://github.com/zijieKwok/istoreos.git
+                cd istoreos
                 export OPENWRT_ROOT_PATH="$(pwd)"
                 echo "OPENWRT_ROOT_PATH=$OPENWRT_ROOT_PATH" >> $GITHUB_ENV
     
           - name: 切换标签/分支
             run: |
-              if [ "${{ matrix.tag_branche }}" = "master-6.1" ] || [ "${{ matrix.tag_branche }}" = "master-5.15" ]; then
+              if [ "${{ matrix.tag_branche }}" = "istoreos-23.05" ] || [ "${{ matrix.tag_branche }}" = "istoreos-22.03" ]; then
                 tag_branche=master
               else
                 tag_branche=${{ matrix.tag_branche }}
@@ -90,7 +90,7 @@ jobs:
           - name: 生成配置文件
             working-directory: ${{ env.OPENWRT_ROOT_PATH }}
             run: |
-              if [ "${{ matrix.tag_branche }}" = "master-6.1" ]; then
+              if [ "${{ matrix.tag_branche }}" = "istoreos-5.15" ]; then
                 echo "CONFIG_TARGET_qualcommax=y" >> $OPENWRT_ROOT_PATH/.config
                 echo "CONFIG_TARGET_qualcommax_ipq807x=y" >> $OPENWRT_ROOT_PATH/.config
                 echo "CONFIG_TARGET_qualcommax_ipq807x_DEVICE_redmi_ax6=y" >> $OPENWRT_ROOT_PATH/.config
@@ -134,7 +134,7 @@ jobs:
               echo "compile = "${{ matrix.compile }}
               rm -rf .config .config.old tmp
               ls -la
-              if [ "${{ matrix.tag_branche }}" = "master-6.1" ]; then
+              if [ "${{ matrix.tag_branche }}" = "istoreos-5.15" ]; then
                 echo "CONFIG_TARGET_qualcommax=y" >> $OPENWRT_ROOT_PATH/.config
                 echo "CONFIG_TARGET_qualcommax_ipq807x=y" >> $OPENWRT_ROOT_PATH/.config
                 echo "CONFIG_TARGET_qualcommax_ipq807x_DEVICE_redmi_ax6=y" >> $OPENWRT_ROOT_PATH/.config
@@ -194,9 +194,9 @@ jobs:
     #          CONFIG_TARGET_SUBTARGET=$(sed -n 's/CONFIG_TARGET_SUBTARGET="\(.*\)"/\1/p' .config) #64
     #          if [ "${{ matrix.tag_branche }}" = "master" ]; then
     #            RELEASE=snapshots
-    #          elif [ "${{ matrix.tag_branche }}" = "openwrt-23.05" ] || [ "${{ matrix.tag_branche }}" = "v23.05.0" ]; then
+    #          elif [ "${{ matrix.tag_branche }}" = "istoreos-23.05" ] || [ "${{ matrix.tag_branche }}" = "v23.05.0" ]; then
     #            RELEASE=releases/v23.05.0
-    #          elif [ "${{ matrix.tag_branche }}" = "openwrt-22.03" ] || [ "${{ matrix.tag_branche }}" = "v22.03.5" ]; then
+    #          elif [ "${{ matrix.tag_branche }}" = "istoreos-22.03" ] || [ "${{ matrix.tag_branche }}" = "v22.03.5" ]; then
     #            RELEASE=releases/22.03.5
     #          fi
     #          FILE_NAME=$(curl -s -L --retry 3 --connect-timeout 20 https://downloads.openwrt.org/snapshots/targets/$CONFIG_TARGET_BOARD/$CONFIG_TARGET_SUBTARGET/ | grep -m 1 -o "openwrt-toolchain-${CONFIG_TARGET_BOARD}-${CONFIG_TARGET_SUBTARGET}_gcc[^\"]*\.Linux-${CONFIG_TARGET_BOARD}_${CONFIG_TARGET_SUBTARGET}\.tar\.xz" | sed 's/^.*<a href="//' | sort -u)
