--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         tag_branche: [istoreos-23.05,istoreos-22.03]
         compile: [FLOW_OFFLOAD,SHORTCUT_FE,SHORTCUT_FE_CM,SHORTCUT_FE_DRV]
         exclude:
-          - tag_branche: istoreos-23.05
+          - tag_branche: master-5.15
             compile: SHORTCUT_FE_DRV
           #master分支没有可用支持SHORTCUT_FE_DRV的5.15内核架构
     steps:
@@ -65,7 +65,7 @@ jobs:
     
           - name: 切换标签/分支
             run: |
-              if [ "${{ matrix.tag_branche }}" = "istoreos-23.05" ] || [ "${{ matrix.tag_branche }}" = "istoreos-22.03" ]; then
+              if [ "${{ matrix.tag_branche }}" = "master-6.1" ] || [ "${{ matrix.tag_branche }}" = "master-5.15" ]; then
                 tag_branche=master
               else
                 tag_branche=${{ matrix.tag_branche }}
@@ -194,10 +194,10 @@ jobs:
     #          CONFIG_TARGET_SUBTARGET=$(sed -n 's/CONFIG_TARGET_SUBTARGET="\(.*\)"/\1/p' .config) #64
     #          if [ "${{ matrix.tag_branche }}" = "master" ]; then
     #            RELEASE=snapshots
-    #          elif [ "${{ matrix.tag_branche }}" = "istoreos-23.05" ] || [ "${{ matrix.tag_branche }}" = "v23.05.2" ]; then
-    #            RELEASE=releases/v23.05.2
-    #          elif [ "${{ matrix.tag_branche }}" = "istoreos-22.03" ] || [ "${{ matrix.tag_branche }}" = "v22.03.6" ]; then
-    #            RELEASE=releases/22.03.6
+    #          elif [ "${{ matrix.tag_branche }}" = "openwrt-23.05" ] || [ "${{ matrix.tag_branche }}" = "v23.05.0" ]; then
+    #            RELEASE=releases/v23.05.0
+    #          elif [ "${{ matrix.tag_branche }}" = "openwrt-22.03" ] || [ "${{ matrix.tag_branche }}" = "v22.03.5" ]; then
+    #            RELEASE=releases/22.03.5
     #          fi
     #          FILE_NAME=$(curl -s -L --retry 3 --connect-timeout 20 https://downloads.openwrt.org/snapshots/targets/$CONFIG_TARGET_BOARD/$CONFIG_TARGET_SUBTARGET/ | grep -m 1 -o "openwrt-toolchain-${CONFIG_TARGET_BOARD}-${CONFIG_TARGET_SUBTARGET}_gcc[^\"]*\.Linux-${CONFIG_TARGET_BOARD}_${CONFIG_TARGET_SUBTARGET}\.tar\.xz" | sed 's/^.*<a href="//' | sort -u)
     #          curl -L --retry 3 --connect-timeout 20 https://downloads.openwrt.org/$RELEASE/targets/$CONFIG_TARGET_BOARD/$CONFIG_TARGET_SUBTARGET/$FILE_NAME -o staging_dir/toolchain.tar.xz
